<resources>
    <string name="app_name">MemoryGame</string>
    <string name="username_textview">Username:</string>
    <string name="username_edittext">username</string>
    <string name="password_textview">Password:</string>
    <string name="password_edittext">password</string>
    <string name="login_text">login</string>
    <string name="start_button">start</string>
    <string name="statistics_button">statistics</string>
    <string name="restart_buttontext">restart</string>
    <string name="todo">TODO</string>
    <string name="error_empty_username">Cannot input empty username.</string>
    <string name="error_empty_password">Cannot input empty password.</string>
    <string name="remove_me">remove me</string>
    <string name="best">best</string>
    <string name="worst">worst</string>
    <string name="username">Username:</string>
    <string name="database_name">memory_game.db</string>
    <string name="email">Email:</string>
    <string name="emailedit">email</string>
    <string name="error_empty_email">Cannot input empty email.</string>
    <string name="register">register</string>
    <string name="refresh">refresh</string>
</resources>